<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/edit_choice_id"-->
        <!--android:title="选择产品id"-->
        <!--app:showAsAction="withText"/>-->
    <!--<item-->
        <!--android:id="@+id/edit_product_id"-->
        <!--android:title="@string/menu_title_product_id"-->
        <!--app:showAsAction="withText"/>-->
    <!--<item-->
        <!--android:id="@+id/edit_company_id"-->
        <!--android:title="@string/menu_edit_company_id"-->
        <!--app:showAsAction="withText"/>-->
    <item
        android:id="@+id/share_device_list"
        android:title="@string/share_device_list"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/sdk_version"
        android:title="@string/show_sdk_version"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/sign_out"
        android:title="@string/menu_sign_out"
        app:showAsAction="withText"/>
</menu>