<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/rect_corner_solid"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:lines="1"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:text="@string/rename"
        android:textColor="@color/colorText"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/whiteText"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/colorControlActivated"
            android:textSize="16sp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/whiteText"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/complete"
            android:textColor="@color/colorControlActivated"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>