<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_corner_solid"
    android:gravity="center"
    android:orientation="vertical">

<TextView
    android:id="@+id/text_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:lines="1"
    android:maxLines="1"
    android:text="@string/app_name"
    android:textColor="@color/colorText"
    android:textSize="30sp"/>

    <RadioGroup
        android:id="@+id/radioGroup_sex_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center"
            android:textSize="20dp"
            android:text="产品1"/>
        <!--<RadioButton-->
            <!--android:id="@+id/radio2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="50dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="产品2"/>-->
        <!--<RadioButton-->
            <!--android:id="@+id/radio3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="50dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="产品3"/>-->
    </RadioGroup>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="55dp"
android:layout_margin="30dp"
android:orientation="horizontal">

<android.support.v7.widget.AppCompatButton
    android:id="@+id/button_cancel"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_weight="1"
    android:text="@string/cancel"
    android:textColor="@color/whiteText"
    android:textSize="16sp"
    app:backgroundTint="@color/colorHint"/>

<android.support.v7.widget.AppCompatButton
    android:id="@+id/button_confirm1"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_weight="1"
    android:text="@string/confirm"
    android:textColor="@color/whiteText"
    android:textSize="16sp"
    app:backgroundTint="@color/colorControlActivated"/>
</LinearLayout>
    </LinearLayout>