<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/rect_corner_solid"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@color/colorText"
        android:textSize="30sp"/>

    <CheckBox
        android:id="@+id/item_bool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="value"
        android:visibility="gone"
        android:textColor="@color/colorHint"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/item_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="12"/>

    <SeekBar
        android:id="@+id/item_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxHeight="4dp"
        android:thumbOffset="0dip"
        android:visibility="gone"
        android:max="100"/>

    <EditText
        android:id="@+id/item_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:singleLine="true"
        android:visibility="gone"
        android:text="12"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/whiteText"
            android:textSize="16sp"
            app:backgroundTint="@color/colorHint"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textColor="@color/whiteText"
            android:textSize="16sp"
            app:backgroundTint="@color/colorControlActivated"/>
    </LinearLayout>
</LinearLayout>