<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.xlink.sdk.demo.configwifi.ConfigWifiActivity">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/uiframe_main_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                android:src="@mipmap/bg_wifi_set" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/colorPageBg"
            android:gravity="center_horizontal"
            android:text="@string/config_wifi_tips"
            android:textColor="@color/uiframe_text_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ed_wifi_ssid"
                style="@style/AppTheme.EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:drawableRight="@mipmap/login_bg_more"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/config_wifi_hint"
                android:inputType="textEmailAddress"
                android:maxLength="24"
                android:singleLine="true" />


            <EditText
                android:id="@+id/ed_wifi_password"
                style="@style/AppTheme.EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:inputType="textPassword"
                android:hint="@string/config_wifi_pass"
                android:maxLength="16"
                android:maxLines="1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <!--<CheckBox-->
                    <!--android:id="@+id/cb_forgot_password"-->
                    <!--android:layout_width="120dp"-->
                    <!--android:layout_height="30dp"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:text="@string/config_wifi_forgot_password" />-->


            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/bt_start"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="45dp"
            android:text="开始配网" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
